update new cover

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: YXEnergy 奕星能源科技
+title: 奕星能源科技
 description: 提供高性能用户侧资源聚合管理的解决方案
 cover: assets/images/radhakrishna.jpg
 logo: assets/images/logo.png
